karnc/tests/fixtures/positive/153_queue_multiple/src/jobs.karn
context jobs

type Job = {
  id: String,
}

service highWorker from queue("high-priority") {
  on message(message: Job) -> Effect[QueueResult] {
    Ack
  }
}

service lowWorker from queue("low-priority") {
  on message(message: Job) -> Effect[QueueResult] {
    Ack
  }
}
