karnc/tests/fixtures/negative/112_cron_invalid_schedule/src/svc.karn
context svc

service sweeper {
  on cron("every day") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
